...
    return AppBar(
      toolbarHeight: setHeight(80),
      title: Center(
        child: Padding(
          padding: EdgeInsets.only(left: setWidth(110)),
          child: Text(
            'Home',
            style: TextStyle(
              fontSize: setFontSize(24),
            ),
          ),
        ),
      ),
...
                  ),
                ),
            ],
          ),
        ),
        IconButton(
          key: const Key('button_appbar_logout'),
          icon: const Icon(
            Icons.logout,
            color: Colors.black,
          ),
          onPressed: () {
            AppMessageCustom().confirmation(context, 'Você deseja sair mesmo?',
...
