...
class AppMessageCustomWidget with ScreenUtilityMixin {
  void error(BuildContext context, String message) {
    showDialog(
      context: context,
      builder: (BuildContext context) {
        return Center(
          key: const Key('alert_dialog_info_error'),
          child: AlertDialog(
            actionsAlignment: MainAxisAlignment.center,
            shape: RoundedRectangleBorder(
              borderRadius: BorderRadius.circular(setRadius(10)),
            ),
            title: Text(
...
                        const TextStyle(decoration: TextDecoration.underline),
                  ),
                  child: const Text('Cancelar'),
                ),
              ),
              TextButton(
                key: const Key('button_logout_confirm'),
                onPressed: () {
                  Navigator.pop(context);
                },
                style: TextButton.styleFrom(
                  foregroundColor: Colors.white,
                  backgroundColor: Colors.red,
...
