...
                      appState: _controller.store.storePageLoading,
                      child: Column(
                        mainAxisAlignment: MainAxisAlignment.center,
                        crossAxisAlignment: CrossAxisAlignment.stretch,
                        children: [
                          Text(
                            'Seja bem-vindo(a)',
                            key: const Key('title_home'),
                            textAlign: TextAlign.center,
                            style: GoogleFonts.montserrat(
                              textStyle:
                                  Theme.of(context).textTheme.headlineMedium,
                            ),
...
                                ),
                                SizedBox(height: setHeight(100)),
                                SizedBox(
                                  width: double.infinity,
                                  height: setHeight(50),
                                  child: ElevatedButton(
                                    key: const Key('button_enter_login'),
                                    style: ElevatedButton.styleFrom(
                                        backgroundColor:
                                            const Color(0xfff5eb64),
                                        elevation: 3),
                                    onPressed: () {
                                      if (_controller.store.storeFormKey.value
...
